cmake_minimum_required(VERSION 3.26)
project(Assignment2)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assignment2 main.cpp
        Room.h
        Room.h
        Room.cpp
        Office.h
        Office.cpp
        Classroom.h
        Classroom.cpp
        Building.h
        Building.cpp
        University.h
        University.cpp)
